<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:theme="@style/Theme.MyCard">
        <item
            android:id="@+id/cardlist"
            android:icon="@drawable/list"
            android:title="@string/menu_cardlist" />
        <item
            android:id="@+id/banklist"
            android:icon="@drawable/bank_img"
            android:title="@string/menu_banklist" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/confDescription"
            android:icon="@drawable/confidencial"
            android:title="@string/confidencial_menu" />
        <item
            android:id="@+id/aboutApp"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>
</menu>