<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Fragments.BankAddForm">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/bank_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/bank_name_input"
                android:maxWidth="380dp"
                android:textColorHint="#78909C"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bank_button_add"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/bbkg"
                android:maxWidth="70dp"
                android:text="@string/txt_cardCreate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardColorTXT" />

            <Button
                android:id="@+id/bank_button_back"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/bbkg"
                android:text="@string/txt_btnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bank_button_add" />

            <TextView
                android:id="@+id/cardColorTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/bank_name"
                app:layout_constraintTop_toBottomOf="@+id/bank_name" />

            <ImageView
                android:id="@+id/ColorCircle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardColorTXT"
                app:layout_constraintStart_toEndOf="@+id/cardColorTXT"
                app:layout_constraintTop_toTopOf="@+id/cardColorTXT"
                app:srcCompat="@drawable/card_color" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>