<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bankview.BankView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_bankdview"
            android:layout_width="0dp"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <EditText
            android:id="@+id/bank_nameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:maxLength="19"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bank_nameTXT"
            app:layout_constraintTop_toBottomOf="@+id/frame_bankdview" />

        <Button
            android:id="@+id/change_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bbkg"
            android:hapticFeedbackEnabled="true"
            android:text="@string/txt_cardмviewDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardCTXT" />

        <Button
            android:id="@+id/backinview_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bbkg"
            android:hapticFeedbackEnabled="true"
            android:text="@string/txt_cardмviewBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_button" />

        <TextView
            android:id="@+id/bank_nameTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/bank_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/bank_nameView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bank_nameView" />

        <TextView
            android:id="@+id/cardCTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/bank_nameTXT"
            app:layout_constraintTop_toBottomOf="@+id/bank_nameTXT" />

        <ImageView
            android:id="@+id/bankColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/color_circle"
            app:layout_constraintBottom_toBottomOf="@+id/cardCTXT"
            app:layout_constraintStart_toEndOf="@+id/cardCTXT"
            app:layout_constraintTop_toTopOf="@+id/cardCTXT" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>